# memx-cdy

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.rs  makefile.build
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
benches/: bench-memchr.rs  bench-memcmp.rs  bench-memcpy.rs  bench-memeq.rs  bench-memmem.rs  bench-memrchr.rs  bench-memrmem.rs  bench-memset.rs
src/: lib.rs  memx.rs
src/c/: base.h  mem_chr.h  mem_rchr.h
src/c/arch/x86/: x86_chr.c  x86_rchr.c
src/c/mem/: mem_chr.c  mem_cmp.c  mem_cpy.c  mem_eq.c  mem_mem.c  mem_rchr.c  mem_rmem.c  mem_set.c
