[package]
name = "memx-cdy"
version = "0.1.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "memory functions like a libc memcmp(), memchr(), memmem(), memcpy(), memset()"
keywords = ["memcmp", "memchr", "memmem"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/memx-cdy"

[lib]
crate-type = ["cdylib"]
# crate-type = ["staticlib"]

[features]
default = []
debian_build = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"
memchr = "2.4"
memx = "0.1"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-lib"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
memory functions like a libc memcmp(), memchr(), memmem(), memcpy(), memset()
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/libmemx_cdy.so", "usr/lib/libmemx_cdy.so.0.1", "644"],
    ["README.md", "usr/share/doc/memx-cdy/", "644"],
]

[[bench]]
name = "bench-memchr"
path = "benches/bench-memchr.rs"
harness = false

[[bench]]
name = "bench-memcmp"
path = "benches/bench-memcmp.rs"
harness = false

[[bench]]
name = "bench-memcpy"
path = "benches/bench-memcpy.rs"
harness = false

[[bench]]
name = "bench-memeq"
path = "benches/bench-memeq.rs"
harness = false

[[bench]]
name = "bench-memmem"
path = "benches/bench-memmem.rs"
harness = false

[[bench]]
name = "bench-memrchr"
path = "benches/bench-memrchr.rs"
harness = false

[[bench]]
name = "bench-memrmem"
path = "benches/bench-memrmem.rs"
harness = false

[[bench]]
name = "bench-memset"
path = "benches/bench-memset.rs"
harness = false
