[package]
name = "memx-cdy"
version = "0.1.10"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "The fast memory functions like a libc memcmp(), memchr(), memmem(), memcpy(), memset()"
keywords = ["memcmp", "memchr", "memmem"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/memx-cdy"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[features]
default = ["no_memcpy"]
debian_build = []

no_memcpy = []

[dependencies]
libc = "0.2"
memx = "0.1"

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-lib"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
The fast memory functions like a libc memcmp(), memchr(), memmem(), memcpy(), memset()
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/libmemx_cdy.so", "usr/lib/libmemx_cdy.so.0.1", "644"],
    ["target/release/libmemx_cdy.a", "usr/lib/libmemx_cdy.a", "644"],
    ["README.md", "usr/share/doc/memx-cdy/", "644"],
]
